Increase visibility of JDK 16+ --add-exports instructions